{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 18,
  "lineage": "84f4592c-fced-ea6d-c389-8b79bb94cc68",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet-GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838123562970:internet-gateway/igw-0ef4e7a06a3f2388e",
            "id": "igw-0ef4e7a06a3f2388e",
            "owner_id": "838123562970",
            "tags": {
              "Name": "Dev-gateway"
            },
            "tags_all": {
              "Name": "Dev-gateway"
            },
            "vpc_id": "vpc-03831f6a287538633"
          },
          "dependencies": [
            "aws_vpc.Test-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838123562970:route-table/rtb-039dc364d5b871a4c",
            "id": "rtb-039dc364d5b871a4c",
            "owner_id": "838123562970",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Dev-private-route-table"
            },
            "tags_all": {
              "Name": "Dev-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03831f6a287538633"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Test-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838123562970:route-table/rtb-07df114e7e52d256f",
            "id": "rtb-07df114e7e52d256f",
            "owner_id": "838123562970",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ef4e7a06a3f2388e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dev-public-route-table"
            },
            "tags_all": {
              "Name": "Dev-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03831f6a287538633"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Internet-GW",
            "aws_vpc.Test-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06639193efdd25a1f",
            "route_table_id": "rtb-039dc364d5b871a4c",
            "subnet_id": "subnet-0bfed117198701c3c"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.Test-VPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d32e26635212f56",
            "route_table_id": "rtb-039dc364d5b871a4c",
            "subnet_id": "subnet-0927e47889ea149bb"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.Test-VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0717fc8f7db3f1fb4",
            "route_table_id": "rtb-07df114e7e52d256f",
            "subnet_id": "subnet-098dfdb3d662e8cbe"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.Test-VPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0deb832203dfaf783",
            "route_table_id": "rtb-07df114e7e52d256f",
            "subnet_id": "subnet-0e7238d1457d40420"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.Test-VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838123562970:subnet/subnet-0bfed117198701c3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfed117198701c3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "838123562970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "Dev-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-03831f6a287538633"
          },
          "dependencies": [
            "aws_vpc.Test-VPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838123562970:subnet/subnet-0927e47889ea149bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0927e47889ea149bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "838123562970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-vpc-private-subnet-2"
            },
            "tags_all": {
              "Name": "Dev-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-03831f6a287538633"
          },
          "dependencies": [
            "aws_vpc.Test-VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838123562970:subnet/subnet-098dfdb3d662e8cbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098dfdb3d662e8cbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "838123562970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "Dev-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-03831f6a287538633"
          },
          "dependencies": [
            "aws_vpc.Test-VPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838123562970:subnet/subnet-0e7238d1457d40420",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7238d1457d40420",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "838123562970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "Dev-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-03831f6a287538633"
          },
          "dependencies": [
            "aws_vpc.Test-VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Test-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838123562970:vpc/vpc-03831f6a287538633",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ff51ef1e555ba0e",
            "default_route_table_id": "rtb-05b64aec7d610296d",
            "default_security_group_id": "sg-0a50db8be4aaf40f1",
            "dhcp_options_id": "dopt-0605d149d2bc8d498",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03831f6a287538633",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05b64aec7d610296d",
            "owner_id": "838123562970",
            "tags": {
              "Name": "Dev-vpc"
            },
            "tags_all": {
              "Name": "Dev-vpc"
            }
          }
        }
      ]
    }
  ]
}